# OpenSkelly

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.txt  HEADER_LICENSE  Makefile  README  README.md  features.txt  scc.cpp
DerivedData/ModuleCache.noindex/: Session.modulevalidation
DerivedData/ModuleCache.noindex/24GVICKIJNTFN/: _Builtin_stddef_max_align_t-25OOTM0E7SZ3X.pcm  modules.idx
DerivedData/ModuleCache.noindex/304NZI3XJWLC8/: _Builtin_stddef_max_align_t-25OOTM0E7SZ3X.pcm  modules.idx
DerivedData/ModuleCache.noindex/3F03G3YDKBN6F/: _Builtin_stddef_max_align_t-25OOTM0E7SZ3X.pcm  modules.idx
DerivedData/ModuleCache.noindex/3NWT9L1LEO9AA/: _Builtin_stddef_max_align_t-25OOTM0E7SZ3X.pcm  modules.idx
DerivedData/OpenSkelly/: info.plist
DerivedData/OpenSkelly/Index.noindex/: build-description.json
DerivedData/OpenSkelly/SymbolCache/: metadata.plist  project.plist
DerivedData/OpenSkelly/TextIndex/: TextFragmentIndex-v8.idx
OpenSkelly/: context.c  dyarr.c  lex.c  main.c
OpenSkelly.xcodeproj/: project.pbxproj
OpenSkelly/include/: context.h  decls.h  dyarr.h  keywords.h  lex.h  skelly.h  token.h
compiler/: scc.c  tools.h
compiler/cli/: output.c
compiler/parse/: skellyc_token.h
compiler/parser/: fext.c  fprule.c
compiler/type/: skellyc_kwlist.h
include/: __scc.h
include/cli/: output.h
include/compiler/: tokens.h
include/io/: file.h  printer.h
include/parser/: fext.h  fprule.h
include/util/: idtype.h  os.h  strcomp.h  strtool.h
src/: main.cpp
src/compiler/: tokens.cpp
tests/compiler/: skellyc_annons_test.h
(+1291 files in other folders)
