cmake_minimum_required(VERSION 3.28)
project(scc)

set(CMAKE_CXX_STANDARD 11)

file(GLOB_RECURSE SCC_SOURCES_CPP CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB_RECURSE SCC_SOURCES_C CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c")
list(APPEND SCC_SOURCES ${SCC_SOURCES_CPP} ${SCC_SOURCES_C})

file(GLOB_RECURSE SCC_HEADERS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")

add_executable(scc "${SCC_SOURCES}" "${SCC_HEADERS}")

target_include_directories(scc PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")